# python-module-template

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  module_example.py  pyproject.toml  setup.py
